Texture paint has 1px offset from mouse center #44308

Closed
opened 2015-04-08 11:09:16 +02:00 by EvgenyRodygin · 10 comments

System Information
Ubuntu Linux 14.10 64bit, GPU: NVIDIA GeForce 680 GTX

Blender Version
Broken: 2.74 000dfc0
Worked: 2.73a

In texture paint mode when drawing on the image pixels have 1px offset in the top-right direction from the mouse position.

Exact steps for others to reproduce the error
Open a new blend file. Switch to UV/Image

**System Information** Ubuntu Linux 14.10 64bit, GPU: NVIDIA GeForce 680 GTX **Blender Version** Broken: 2.74 000dfc0 Worked: 2.73a In texture paint mode when drawing on the image pixels have 1px offset in the top-right direction from the mouse position. **Exact steps for others to reproduce the error** Open a new blend file. Switch to UV/Image
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @EvgenyRodygin

Added subscriber: @EvgenyRodygin
Author

I have accidentally posted this task (thanks to my keyboard) and haven't finished it. And now I can't edit it, though I'm the owner.
Anyway, I think it is clear what I wanted to say.

I have accidentally posted this task (thanks to my keyboard) and haven't finished it. And now I can't edit it, though I'm the owner. Anyway, I think it is clear what I wanted to say.

Added subscriber: @Sergey

Added subscriber: @Sergey

It is clear but we need a file which demonstrates the issue.

It is clear but we need a file which demonstrates the issue.
Author

Added blend file with 16x16 image opened in texture paint mode. You can see that when drawing in UV/Image Editor pixels appear in wrong positions (upper-right from mouse). This behavior takes place in any other file.
texture_paint_offset.blend

P.S. Could you please tell me, what is the reason to not allow owners to edit their tasks? =)

Added blend file with 16x16 image opened in texture paint mode. You can see that when drawing in UV/Image Editor pixels appear in wrong positions (upper-right from mouse). This behavior takes place in any other file. [texture_paint_offset.blend](https://archive.blender.org/developer/F160045/texture_paint_offset.blend) P.S. Could you please tell me, what is the reason to not allow owners to edit their tasks? =)
Antonis Ryakiotakis was assigned by Sergey Sharybin 2015-04-09 11:57:23 +02:00

As for editing tasks: there's no so much thing as "owner", and currently authors does not have ultimate access to editing their tasks simply because there are situations when you don't want this to do (security reports i.e.). There's ongoing work to make access rules more flexible, details are there: https://secure.phabricator.com/T5681

But here please stick to the original report about paint bugs.

As for editing tasks: there's no so much thing as "owner", and currently authors does not have ultimate access to editing their tasks simply because there are situations when you don't want this to do (security reports i.e.). There's ongoing work to make access rules more flexible, details are there: https://secure.phabricator.com/T5681 But here please stick to the original report about paint bugs.

This issue was referenced by d75bfdfafc

This issue was referenced by d75bfdfafcfeb7fa02496be70f57e6fc15d0c397

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit d75bfdfafc.

Closed by commit d75bfdfafc.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44308
No description provided.