Fix T44308 painting in 2D editor offset by one pixel.

Not sure why this was so in the first place but changing it seems OK.